<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/kg"
            android:layout_marginEnd="16dp"/>
        <EditText
            android:id="@+id/input_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:layout_gravity="end"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cards_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_exercise_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_title="@string/running"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/ic_run_black"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_exercise_cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_title="@string/cycling"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/ic_bike_black" />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_exercise_pushups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_title="@string/pushups"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/ic_pushups_black"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_exercise_situps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_title="@string/situps"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/ic_situps_black"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.constraint.ConstraintLayout>